--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "heroku-cli-util": "^5.4.6"
   },
   "devDependencies": {
+    "fixture-stdout": "0.2.1",
     "chai": "^3.2.0",
     "depcheck": "^0.4.7",
     "dir-compare": "^0.0.2",
     "fs-extra": "^0.23.1",
+    "heroku-client": "^3.0.0-beta2",
     "mocha": "^2.2.4",
     "wrench": "^1.5.8"
   }
