--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs-extra": "^0.23.1",
     "heroku-client": "^3.0.0-beta2",
     "mocha": "^2.2.4",
-    "wrench": "^1.5.8"
+    "wrench": "^1.5.8",
+    "unexpected": "10.13.2"
   }
 }
