--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 sudo: required
+dist: trusty
 node_js:
 - '6'
 before_install:
-- bash etc/travis-setup.sh
+- bash etc/ci-setup.sh
