--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 sudo: required
 dist: trusty
 node_js:
-- '8'
+- 'node'
 before_install:
 - bash etc/ci-setup.sh
+script: yarn test
