--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   ],
   "author": "Joe Kutner <joe@heroku.com>",
   "license": "ISC",
+  "files": [
+    "/index.js",
+    "/commands",
+    "/lib"
+  ],
   "dependencies": {
     "heroku-cli-util": "^6.0.14"
   },
