--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,9 @@ version: 2
 
 jobs:
   build:
-    machine: true
+    machine:
+      enabled: true
+      image: circleci/node:7.8.0
     steps:
       - checkout
       - restore_cache:
