--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,10 @@ version: 2
 
 jobs:
   build:
-    machine:
-      enabled: true
-      image: circleci/node:7.8.0
+    docker:
+      - image: circleci/openjdk:latest-node
+    environment:
+      MOCHA_FILE: "$CIRCLE_TEST_REPORTS/test-results.xml"
     steps:
       - checkout
       - restore_cache:
