--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     docker:
       - image: circleci/openjdk:latest-node
     environment:
-      MOCHA_FILE: "$CIRCLE_TEST_REPORTS/test-results.xml"
+      MOCHA_FILE: ./test-results/test-results.xml
     steps:
       - checkout
       - restore_cache:
@@ -27,3 +27,6 @@ jobs:
       - run:
           name: Post-test
           command: if [ -n "$HEROKU_API_KEY" ]; then heroku keys:remove $(whoami)@$(hostname | sed -e "s/\.localdomain//g"); fi
+      - store_test_results:
+          path: ./test-results
+
